fixed margin issue

--- a/views/allnews.hbs
+++ b/views/allnews.hbs
@@ -27,7 +27,7 @@
                           {{this.title}}
                           </h2>
                           <p class="fs-13 text-muted mb-0">
-                            <span class="mr-2">{{category}} </span>{{publishedAt}}
+                            <span class="me-2">{{category}} </span>{{publishedAt}}
                           </p>
                           <p class="fs-15">
                            {{this.description}}
@@ -49,7 +49,7 @@
                                   Ways to stay social online while in self..
                                 </h5>
                                 <p class="fs-13 text-muted mb-0">
-                                  <span class="mr-2">Photo </span>10 Minutes ago
+                                  <span class="me-2">Photo </span>10 Minutes ago
                                 </p>
                               </div>
                               <div class="col-sm-4">
@@ -74,7 +74,7 @@
                                   Premier League players join charity..
                                 </h5>
                                 <p class="fs-13 text-muted mb-0">
-                                  <span class="mr-2">Photo </span>10 Minutes ago
+                                  <span class="me-2">Photo </span>10 Minutes ago
                                 </p>
                               </div>
                               <div class="col-sm-4">
@@ -99,7 +99,7 @@
                                   UK Athletics board changed stance on..
                                 </h5>
                                 <p class="fs-13 text-muted mb-0">
-                                  <span class="mr-2">Photo </span>10 Minutes ago
+                                  <span class="me-2">Photo </span>10 Minutes ago
                                 </p>
                               </div>
                               <div class="col-sm-4">
@@ -131,7 +131,7 @@
                             Virus Kills Member Of Advising Iran’s Supreme
                           </h3>
                           <p class="fs-13 text-muted mb-0">
-                            <span class="mr-2">Photo </span>10 Minutes ago
+                            <span class="me-2">Photo </span>10 Minutes ago
                           </p>
                         </div>
                         <div class="mb-4">
@@ -146,7 +146,7 @@
                             Virus Kills Member Of Advising Iran’s Supreme
                           </h3>
                           <p class="fs-13 text-muted mb-0">
-                            <span class="mr-2">Photo </span>10 Minutes ago
+                            <span class="me-2">Photo </span>10 Minutes ago
                           </p>
                         </div>
                         <div class="mb-4">
@@ -163,7 +163,7 @@
                             Virus Kills Member Of Advising Iran’s Supreme
                           </h3>
                           <p class="fs-13 text-muted mb-0">
-                            <span class="mr-2">Photo </span>10 Minutes ago
+                            <span class="me-2">Photo </span>10 Minutes ago
                           </p>
                         </div>
                       </div>
