--- a/views/ministers.hbs
+++ b/views/ministers.hbs
@@ -22,7 +22,7 @@
 
                                     </div>
                                     <div class="col py-3 px-lg-5  border bg-light text-left  text-info ">
-                                        <ol class="list-group list-group-flush pr-0 pl-0">
+                                        <ol class="list-group list-group-flush pe-0 ps-0">
                                             <li class="list-group-item bg-transparent">Home (excluding Jail and Fire & Emergency Service)</li>
                                             <li class="list-group-item bg-transparent">Health & Family Welfare</li>
                                             <li class="list-group-item bg-transparent">PWD (excluding DWS)</li>
@@ -47,7 +47,7 @@
 
                                     </div>
                                     <div class="col py-3 px-lg-5  border bg-light text-left  text-info ">
-                                        <ol class="list-group list-group-flush pr-0 pl-0">
+                                        <ol class="list-group list-group-flush pe-0 ps-0">
                                             <li class="list-group-item bg-transparent">Power</li>
                                             <li class="list-group-item bg-transparent">RD (including Panchayat)</li>
                                             <li class="list-group-item bg-transparent">Finance</li>
@@ -71,7 +71,7 @@
 
                                     </div>
                                     <div class="col py-3 px-lg-5  border bg-light text-left  text-info ">
-                                        <ol class="list-group list-group-flush pr-0 pl-0">
+                                        <ol class="list-group list-group-flush pe-0 ps-0">
                                             <li class="list-group-item bg-transparent">Revenue</li>
                                             <li class="list-group-item bg-transparent">Forest</li>                                        
                                             </ol>
@@ -92,7 +92,7 @@
 
                                     </div>
                                     <div class="col py-3 px-lg-5  border bg-light text-left  text-info ">
-                                        <ol class="list-group list-group-flush pr-0 pl-0">
+                                        <ol class="list-group list-group-flush pe-0 ps-0">
                                             <li class="list-group-item bg-transparent">Education (Higher)</li>
                                             <li class="list-group-item bg-transparent">Education (School)</li>                                        
                                            <li class="list-group-item bg-transparent">LAW (including Parliamentary Affairs)</li>  
@@ -114,7 +114,7 @@
 
                                     </div>
                                     <div class="col py-3 px-lg-5  border bg-light text-left  text-info ">
-                                        <ol class="list-group list-group-flush pr-0 pl-0">
+                                        <ol class="list-group list-group-flush pe-0 ps-0">
                                             <li class="list-group-item bg-transparent">Agriculture & Farmers' Welfare</li>
                                             <li class="list-group-item bg-transparent">Transport</li>                                        
                                            <li class="list-group-item bg-transparent">Tourism</li>  
@@ -133,7 +133,7 @@
 
                                     </div>
                                     <div class="col py-3 px-lg-5  border bg-light text-left  text-info ">
-                                        <ol class="list-group list-group-flush pr-0 pl-0">
+                                        <ol class="list-group list-group-flush pe-0 ps-0">
                                             <li class="list-group-item bg-transparent">Food CS & CA</li>
                                             <li class="list-group-item bg-transparent">Urban Development</li>                                        
                                          
@@ -154,7 +154,7 @@
 
                                     </div>
                                     <div class="col py-3 px-lg-5  border bg-light text-left  text-info ">
-                                        <ol class="list-group list-group-flush pr-0 pl-0">
+                                        <ol class="list-group list-group-flush pe-0 ps-0">
                                             <li class="list-group-item bg-transparent">Social Welfare & Social Education</li>
                                             <li class="list-group-item bg-transparent">Industry & Commerce (excluding Handloom, Handicraft & Sericulture and IT)</li>                                        
                                          
@@ -175,7 +175,7 @@
 
                                     </div>
                                     <div class="col py-3 px-lg-5  border bg-light text-left  text-info ">
-                                        <ol class="list-group list-group-flush pr-0 pl-0">
+                                        <ol class="list-group list-group-flush pe-0 ps-0">
                                             <li class="list-group-item bg-transparent">Jail Department</li>
                                             <li class="list-group-item bg-transparent">Fire & Emergency Service Department</li>                                        
                                           <li class="list-group-item bg-transparent">Welfare of Other Backward Classes</li>
@@ -197,7 +197,7 @@
 
                                     </div>
                                     <div class="col py-3 px-lg-5  border bg-light text-left  text-info ">
-                                        <ol class="list-group list-group-flush pr-0 pl-0">
+                                        <ol class="list-group list-group-flush pe-0 ps-0">
                                             <li class="list-group-item bg-transparent">Welfare of Scheduled Castes</li>
                                             <li class="list-group-item bg-transparent">Animal Resource Development</li>                                        
                                           <li class="list-group-item bg-transparent">Labour</li>
@@ -218,7 +218,7 @@
 
                                     </div>
                                     <div class="col py-3 px-lg-5  border bg-light text-left  text-info ">
-                                        <ol class="list-group list-group-flush pr-0 pl-0">
+                                        <ol class="list-group list-group-flush pe-0 ps-0">
                                             <li class="list-group-item bg-transparent">Information & Culture Affairs</li>
                                             <li class="list-group-item bg-transparent">Youth Affairs & Sports</li>                                        
                                           <li class="list-group-item bg-transparent">PWD (DWS)</li>
@@ -240,7 +240,7 @@
 
                                     </div>
                                     <div class="col py-3 px-lg-5  border bg-light text-left  text-info ">
-                                        <ol class="list-group list-group-flush pr-0 pl-0">
+                                        <ol class="list-group list-group-flush pe-0 ps-0">
                                             <li class="list-group-item bg-transparent">Tribal Welfare</li>
                                             <li class="list-group-item bg-transparent">Industry & Commerce (Handloom, Handicraft & Sericulture)</li>                                        
                                       
@@ -261,7 +261,7 @@
 
                                     </div>
                                     <div class="col py-3 px-lg-5  border bg-light text-left  text-info ">
-                                        <ol class="list-group list-group-flush pr-0 pl-0">
+                                        <ol class="list-group list-group-flush pe-0 ps-0">
                                             <li class="list-group-item bg-transparent">Fishery</li>
                                             <li class="list-group-item bg-transparent">Cooperation</li>                                        
                                       
