--- a/views/partials/flashnews.hbs
+++ b/views/partials/flashnews.hbs
@@ -2,7 +2,7 @@
           <div class="container">
             <div class="d-lg-flex align-items-center justify-content-between">
               <div class="d-flex align-items-center mqstyle">
-                <span class="badge badge-dark mr-3">Flash news</span>
+                <span class="badge badge-dark me-3">Flash news</span>
                  <p class="mb-0" onclick="window.location.href = '/allnews?category=NEH Report'">
       <!--<marquee >
 
@@ -12,8 +12,7 @@
                
               </div>
               <div class="d-flex">
-                <span class="text-danger me-2">{{dateFormat now "dddd, MMM Do YYYY"}}  </span>
-               
+                <span class="text-danger me-2">{{dateFormat now "dddd, MMM Do YYYY"}}  </span>               
                 <span class="text-danger">32°C,Agartala</span>
               </div>
             </div>
