--- a/views/home.hbs
+++ b/views/home.hbs
@@ -32,7 +32,7 @@
               {{title}}
             </h1>
             <div class="fs-12">
-              <span class="mr-2">{{category}}</span>
+              <span class="me-2">{{category}}</span>
             </div>
           </div>
         </div>
@@ -44,10 +44,10 @@
         <div class="card-body">
           <h2>Latest news</h2>
           {{#latestnews latestnews}}
-          <div class="pr-3 news-a cursor-pointer" onclick="window.location.href = '/news?category={{newsCategory}}&id={{id}}'">
+          <div class="pe-3 news-a cursor-pointer" onclick="window.location.href = '/news?category={{newsCategory}}&id={{id}}'">
             <h5>{{title}}</h5>
             <div class="fs-12">
-              <span class="mr-2">{{category}}</span>{{publishedAt}}
+              <span class="me-2">{{category}}</span>{{publishedAt}}
             </div>
           </div>
           <div class="rotate-img latest-news-home cursor-pointer" onclick="window.location.href = '/news?category={{newsCategory}}&id={{id}}'">
@@ -86,7 +86,7 @@
                 {{title}}
               </h2>
               <div class="fs-13 mb-2">
-                <span class="mr-2">{{category}}</span>{{publishedAt}}
+                <span class="me-2">{{category}}</span>{{publishedAt}}
               </div>
               <p class="mb-0 a-black">
                 {{description}}
@@ -134,7 +134,7 @@
                 {{title}}
               </h2>
               <div class="fs-13 mb-2">
-                <span class="mr-2">{{category}}</span>{{publishedAt}}
+                <span class="me-2">{{category}}</span>{{publishedAt}}
               </div>
               <p class="mb-0 a-black">
                 {{description}}
@@ -185,7 +185,7 @@
                 {{title}}
               </h2>
               <div class="fs-13 mb-2">
-                <span class="mr-2">{{category}}</span>{{publishedAt}}
+                <span class="me-2">{{category}}</span>{{publishedAt}}
               </div>
               <p class="mb-0 a-black">
                 {{description}}
@@ -233,7 +233,7 @@
                 {{title}}
               </h2>
               <div class="fs-13 mb-2">
-                <span class="mr-2">{{category}}</span>{{publishedAt}}
+                <span class="me-2">{{category}}</span>{{publishedAt}}
               </div>
               <p class="mb-0 a-black">
                 {{description}}
@@ -281,7 +281,7 @@
                 {{title}}
               </h2>
               <div class="fs-13 mb-2">
-                <span class="mr-2">{{category}}</span>{{publishedAt}}
+                <span class="me-2">{{category}}</span>{{publishedAt}}
               </div>
               <p class="mb-0 a-black">
                 {{description}}
@@ -329,7 +329,7 @@
                 {{title}}
               </h2>
               <div class="fs-13 mb-2">
-                <span class="mr-2">{{category}}</span>{{publishedAt}}
+                <span class="me-2">{{category}}</span>{{publishedAt}}
               </div>
               <p class="mb-0 a-black">
                 {{description}}
@@ -377,7 +377,7 @@
                 {{title}}
               </h2>
               <div class="fs-13 mb-2">
-                <span class="mr-2">{{category}}</span>{{publishedAt}}
+                <span class="me-2">{{category}}</span>{{publishedAt}}
               </div>
               <p class="mb-0 a-black">
                 {{description}}
@@ -425,7 +425,7 @@
                 {{title}}
               </h2>
               <div class="fs-13 mb-2">
-                <span class="mr-2">{{category}}</span>{{publishedAt}}
+                <span class="me-2">{{category}}</span>{{publishedAt}}
               </div>
               <p class="mb-0 a-black">
                 {{description}}
@@ -580,7 +580,7 @@
                   all</p>
               </div>
               <div class="d-flex justify-content-between align-items-center border-bottom pb-2">
-                <div class="div-w-80 mr-3">
+                <div class="div-w-80 me-3">
                   <div class="rotate-img">
                     <img src="/images/dashboard/home_11.jpg" alt="thumb" class="img-fluid" />
                   </div>
@@ -590,7 +590,7 @@
                 </h3>
               </div>
               <div class="d-flex justify-content-between align-items-center border-bottom pt-3 pb-2">
-                <div class="div-w-80 mr-3">
+                <div class="div-w-80 me-3">
                   <div class="rotate-img">
                     <img src="/images/dashboard/home_12.jpg" alt="thumb" class="img-fluid" />
                   </div>
@@ -600,7 +600,7 @@
                 </h3>
               </div>
               <div class="d-flex justify-content-between align-items-center border-bottom pt-3 pb-2">
-                <div class="div-w-80 mr-3">
+                <div class="div-w-80 me-3">
                   <div class="rotate-img">
                     <img src="/images/dashboard/home_13.jpg" alt="thumb" class="img-fluid" />
                   </div>
@@ -610,7 +610,7 @@
                 </h3>
               </div>
               <div class="d-flex justify-content-between align-items-center border-bottom pt-3 pb-2">
-                <div class="div-w-80 mr-3">
+                <div class="div-w-80 me-3">
                   <div class="rotate-img">
                     <img src="/images/dashboard/home_14.jpg" alt="thumb" class="img-fluid" />
                   </div>
@@ -620,7 +620,7 @@
                 </h3>
               </div>
               <div class="d-flex justify-content-between align-items-center pt-3">
-                <div class="div-w-80 mr-3">
+                <div class="div-w-80 me-3">
                   <div class="rotate-img">
                     <img src="/images/dashboard/home_15.jpg" alt="thumb" class="img-fluid" />
                   </div>
@@ -655,14 +655,14 @@
                     Newsrooms exercise..
                   </h2>
                   <p class="fs-13 mb-1 text-muted">
-                    <span class="mr-2">Photo </span>10 Minutes ago
+                    <span class="me-2">Photo </span>10 Minutes ago
                   </p>
                   <p class="my-3 fs-15">
                     Lorem Ipsum has been the industry's standard dummy
                     text ever since the 1500s, when an unknown printer
                     took
                   </p>
-                  <a href="#" class="font-weight-600 fs-16 text-dark">Read more</a>
+                  <a href="#" class="font-weight-600 fs-15 text-dark">Read more</a>
                 </div>
                 <div class="col-xl-6 col-lg-4 col-sm-6">
                   <div class="border-bottom pb-3 mb-3">
@@ -670,7 +670,7 @@
                       Social distancing is ..
                     </h3>
                     <p class="fs-13 text-muted mb-0">
-                      <span class="mr-2">Photo </span>10 Minutes ago
+                      <span class="me-2">Photo </span>10 Minutes ago
                     </p>
                     <p class="mb-0">
                       Lorem Ipsum has been the industry's
@@ -681,7 +681,7 @@
                       Panic buying is forcing..
                     </h3>
                     <p class="fs-13 text-muted mb-0">
-                      <span class="mr-2">Photo </span>10 Minutes ago
+                      <span class="me-2">Photo </span>10 Minutes ago
                     </p>
                     <p class="mb-0">
                       Lorem Ipsum has been the industry's
@@ -692,7 +692,7 @@
                       Businesses ask hundreds..
                     </h3>
                     <p class="fs-13 text-muted mb-0">
-                      <span class="mr-2">Photo </span>10 Minutes ago
+                      <span class="me-2">Photo </span>10 Minutes ago
                     </p>
                     <p class="mb-0">
                       Lorem Ipsum has been the industry's
@@ -703,7 +703,7 @@
                       Tesla's California factory..
                     </h3>
                     <p class="fs-13 text-muted mb-0">
-                      <span class="mr-2">Photo </span>10 Minutes ago
+                      <span class="me-2">Photo </span>10 Minutes ago
                     </p>
                     <p class="mb-0">
                       Lorem Ipsum has been the industry's
@@ -727,7 +727,7 @@
                       Arindam Nath: I CAME IN DARKNESS, AM LEAVING WHEN IT’S STILL DARK....
                     </p>
                     <p class="fs-13 text-muted mb-0">
-                      <span class="mr-2">Photo </span>10 Minutes ago
+                      <span class="me-2">Photo </span>10 Minutes ago
                     </p>
                   </div>
                   <div class="pt-3 pb-3">
@@ -738,7 +738,7 @@
                       Kaine: Trump Jr. may have
                     </p>
                     <p class="fs-13 text-muted mb-0">
-                      <span class="mr-2">Photo </span>10 Minutes ago
+                      <span class="me-2">Photo </span>10 Minutes ago
                     </p>
                   </div>
                 </div>
@@ -750,17 +750,17 @@
                     <div class="col-sm-12">
                       <div class="border-bottom pb-3">
                         <div class="row">
-                          <div class="col-sm-5 pr-2">
+                          <div class="col-sm-5 pe-2">
                             <div class="rotate-img">
                               <img src="/images/dashboard/home_19.jpg" alt="thumb" class="img-fluid w-100" />
                             </div>
                           </div>
-                          <div class="col-sm-7 pl-2">
-                            <p class="fs-16 font-weight-600 mb-0">
+                          <div class="col-sm-7 ps-2">
+                            <p class="fs-15 font-weight-600 mb-0">
                               Online shopping ..
                             </p>
                             <p class="fs-13 text-muted mb-0">
-                              <span class="mr-2">Photo </span>10
+                              <span class="me-2">Photo </span>10
                               Minutes ago
                             </p>
                             <p class="mb-0 fs-13">
@@ -775,17 +775,17 @@
                     <div class="col-sm-12">
                       <div class="border-bottom pb-3 pt-3">
                         <div class="row">
-                          <div class="col-sm-5 pr-2">
+                          <div class="col-sm-5 pe-2">
                             <div class="rotate-img">
                               <img src="/images/dashboard/home_20.jpg" alt="thumb" class="img-fluid w-100" />
                             </div>
                           </div>
-                          <div class="col-sm-7 pl-2">
-                            <p class="fs-16 font-weight-600 mb-0">
+                          <div class="col-sm-7 ps-2">
+                            <p class="fs-15 font-weight-600 mb-0">
                               Online shopping ..
                             </p>
                             <p class="fs-13 text-muted mb-0">
-                              <span class="mr-2">Photo </span>10
+                              <span class="me-2">Photo </span>10
                               Minutes ago
                             </p>
                             <p class="mb-0 fs-13">
@@ -800,17 +800,17 @@
                     <div class="col-sm-12">
                       <div class="border-bottom pb-3 pt-3">
                         <div class="row">
-                          <div class="col-sm-5 pr-2">
+                          <div class="col-sm-5 pe-2">
                             <div class="rotate-img">
                               <img src="/images/dashboard/home_21.jpg" alt="thumb" class="img-fluid w-100" />
                             </div>
                           </div>
-                          <div class="col-sm-7 pl-2">
-                            <p class="fs-16 font-weight-600 mb-0">
+                          <div class="col-sm-7 ps-2">
+                            <p class="fs-15 font-weight-600 mb-0">
                               Online shopping ..
                             </p>
                             <p class="fs-13 text-muted mb-0">
-                              <span class="mr-2">Photo </span>10
+                              <span class="me-2">Photo </span>10
                               Minutes ago
                             </p>
                             <p class="mb-0 fs-13">
@@ -825,17 +825,17 @@
                     <div class="col-sm-12">
                       <div class="pt-3">
                         <div class="row">
-                          <div class="col-sm-5 pr-2">
+                          <div class="col-sm-5 pe-2">
                             <div class="rotate-img">
                               <img src="/images/dashboard/home_22.jpg" alt="thumb" class="img-fluid w-100" />
                             </div>
                           </div>
-                          <div class="col-sm-7 pl-2">
-                            <p class="fs-16 font-weight-600 mb-0">
+                          <div class="col-sm-7 ps-2">
+                            <p class="fs-15 font-weight-600 mb-0">
                               Online shopping ..
                             </p>
                             <p class="fs-13 text-muted mb-0">
-                              <span class="mr-2">Photo </span>10
+                              <span class="me-2">Photo </span>10
                               Minutes ago
                             </p>
                             <p class="mb-0 fs-13">
