--- a/views/news.hbs
+++ b/views/news.hbs
@@ -66,7 +66,7 @@
                                   Ways to stay social online while in self..
                                 </h5>
                                 <p class="fs-13 text-muted mb-0">
-                                  <span class="mr-2">Photo </span>10 Minutes ago
+                                  <span class="me-2">Photo </span>10 Minutes ago
                                 </p>
                               </div>
                               <div class="col-sm-4">
@@ -92,7 +92,7 @@
                                   Premier League players join charity..
                                 </h5>
                                 <p class="fs-13 text-muted mb-0">
-                                  <span class="mr-2">Photo </span>10 Minutes ago
+                                  <span class="me-2">Photo </span>10 Minutes ago
                                 </p>
                               </div>
                               <div class="col-sm-4">
