--- a/views/travel.hbs
+++ b/views/travel.hbs
@@ -26,7 +26,7 @@
                             No charges over 2017 battle bus cases
                           </h2>
                           <p class="fs-13 text-muted mb-0">
-                            <span class="mr-2">Photo </span>10 Minutes ago
+                            <span class="me-2">Photo </span>10 Minutes ago
                           </p>
                           <p class="fs-15">
                             Lorem Ipsum has been the industry's standard dummy
@@ -51,7 +51,7 @@
                             No charges over 2017 battle bus cases
                           </h2>
                           <p class="fs-13 text-muted mb-0">
-                            <span class="mr-2">Photo </span>10 Minutes ago
+                            <span class="me-2">Photo </span>10 Minutes ago
                           </p>
                           <p class="fs-15">
                             Lorem Ipsum has been the industry's standard dummy
@@ -76,7 +76,7 @@
                             Kaine: Trump Jr. may have committed treason
                           </h2>
                           <p class="fs-13 text-muted mb-0">
-                            <span class="mr-2">Photo </span>10 Minutes ago
+                            <span class="me-2">Photo </span>10 Minutes ago
                           </p>
                           <p class="fs-15">
                             Lorem Ipsum has been the industry's standard dummy
@@ -101,7 +101,7 @@
                             South Korea’s Moon Jae-in sworn in vowing to address
                           </h2>
                           <p class="fs-13 text-muted mb-0">
-                            <span class="mr-2">Photo </span>10 Minutes ago
+                            <span class="me-2">Photo </span>10 Minutes ago
                           </p>
                           <p class="fs-15">
                             Lorem Ipsum has been the industry's standard dummy
@@ -126,7 +126,7 @@
                             No charges over 2017 battle bus cases
                           </h2>
                           <p class="fs-13 text-muted mb-0">
-                            <span class="mr-2">Photo </span>10 Minutes ago
+                            <span class="me-2">Photo </span>10 Minutes ago
                           </p>
                           <p class="fs-15">
                             Lorem Ipsum has been the industry's standard dummy
@@ -151,7 +151,7 @@
                             Kaine: Trump Jr. may have committed treason
                           </h2>
                           <p class="fs-13 text-muted mb-0">
-                            <span class="mr-2">Photo </span>10 Minutes ago
+                            <span class="me-2">Photo </span>10 Minutes ago
                           </p>
                           <p class="fs-15">
                             Lorem Ipsum has been the industry's standard dummy
@@ -175,7 +175,7 @@
                                   Ways to stay social online while in self..
                                 </h5>
                                 <p class="fs-13 text-muted mb-0">
-                                  <span class="mr-2">Photo </span>10 Minutes ago
+                                  <span class="me-2">Photo </span>10 Minutes ago
                                 </p>
                               </div>
                               <div class="col-sm-4">
@@ -200,7 +200,7 @@
                                   Premier League players join charity..
                                 </h5>
                                 <p class="fs-13 text-muted mb-0">
-                                  <span class="mr-2">Photo </span>10 Minutes ago
+                                  <span class="me-2">Photo </span>10 Minutes ago
                                 </p>
                               </div>
                               <div class="col-sm-4">
@@ -225,7 +225,7 @@
                                   UK Athletics board changed stance on..
                                 </h5>
                                 <p class="fs-13 text-muted mb-0">
-                                  <span class="mr-2">Photo </span>10 Minutes ago
+                                  <span class="me-2">Photo </span>10 Minutes ago
                                 </p>
                               </div>
                               <div class="col-sm-4">
@@ -257,7 +257,7 @@
                             Virus Kills Member Of Advising Iran’s Supreme
                           </h3>
                           <p class="fs-13 text-muted mb-0">
-                            <span class="mr-2">Photo </span>10 Minutes ago
+                            <span class="me-2">Photo </span>10 Minutes ago
                           </p>
                         </div>
                         <div class="mb-4">
@@ -272,7 +272,7 @@
                             Virus Kills Member Of Advising Iran’s Supreme
                           </h3>
                           <p class="fs-13 text-muted mb-0">
-                            <span class="mr-2">Photo </span>10 Minutes ago
+                            <span class="me-2">Photo </span>10 Minutes ago
                           </p>
                         </div>
                         <div class="mb-4">
@@ -287,7 +287,7 @@
                             Virus Kills Member Of Advising Iran’s Supreme
                           </h3>
                           <p class="fs-13 text-muted mb-0">
-                            <span class="mr-2">Photo </span>10 Minutes ago
+                            <span class="me-2">Photo </span>10 Minutes ago
                           </p>
                         </div>
                       </div>
