--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,7 +3,7 @@
   <div class="row" data-aos="fade-up">
     <div class="col-xl-12 stretch-card grid-margin">
       <div class="card">
-        <div class="position-relative cursor-pointer" onclick="window.open('/photos','_blank').focus">
+        <div class="position-relative cursor-pointer" onclick="window.open('/durgapuja','_blank').focus">
           <img src="images/dashboard/banner2.jpeg" alt="banner" class="img-fluid" />
           <div class="banner-top">
             <h1 class="mb-0">{{shortTitle}}</h1>
