--- a/views/home.hbs
+++ b/views/home.hbs
@@ -21,9 +21,9 @@
         <img src="images/news/global/{{imageName}}" alt="banner" class="img-fluid" />
         <div class="banner-content">
           <div class="overlay">
-            <div class="badge badge-danger fs-12 font-weight-bold mb-3">
+          <!--  <div class="badge badge-danger fs-12 font-weight-bold mb-3">
               Top News
-            </div>
+            </div>-->
             <h1 class="mb-0">{{shortTitle}}</h1>
             <h1 class="mb-2">
               {{title}}
