--- a/views/news.hbs
+++ b/views/news.hbs
@@ -10,7 +10,13 @@
             </div>
             <div class="row">
                 <div class="col-lg-10 img">
-                  <img src="images/news/{{category}}/{{data.imageName}}" alt="image"/>
+                  {{#ifcontains  "https"  data.imageName  }}
+                   <img src="{{data.imageName}}" alt="image" />
+                  {{/ifcontains}}
+                   {{#ifNotcontains  "https"  data.imageName  }}
+                   <img src="images/news/{{category}}/{{data.imageName}}" alt="image"/>
+                  {{/ifNotcontains}}                  
+                 
                   <p class="fs-13 text-muted mb-0">{{data.category}} Report</p>
                 </div>
                 <div class="col-lg-2"> 
