--- a/views/home.hbs
+++ b/views/home.hbs
@@ -49,7 +49,7 @@
           </div>
           <div class="rotate-img latest-news-home cursor-pointer" onclick="window.location.href = '/news?category={{newsCategory}}&id={{id}}'">
            {{#ifcontains  "https"  imageName  }}
-                   <img src="{{imageName}}" alt="image"  class="img-fluid"/>
+                   <img src="{{imageName}}" alt="image"  class="img-fluid img-lg"/>
                   {{/ifcontains}}
                    {{#ifNotcontains  "https"  imageName  }}
             <img src="images/news/{{newsCategory}}/{{imageName}}" alt="thumb" class="img-fluid img-lg" />
