updating today's news

--- a/views/partials/flashnews.hbs
+++ b/views/partials/flashnews.hbs
@@ -3,11 +3,11 @@
             <div class="d-lg-flex align-items-center justify-content-between">
               <div class="d-flex align-items-center mqstyle">
                 <span class="badge badge-dark me-3">Flash news</span>
-                 <p class="mb-0" onclick="window.location.href = '/allnews?category=NEH Report'">
-      <!--<marquee >
-
+                 <p class="mb-0" onclick="window.location.href = '/news?category=flahsnews&id=F061120221'">
+      <marquee >
+<p>In a gruesome incident a minor boy has killed  4 of his family members in Dhalai district, Tripura</p>
        
-        </marquee>-->
+        </marquee>
     </p>
                
               </div>
