update all news

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -17,7 +17,7 @@
   <div class="row" data-aos="fade-up">
     <div class="col-xl-8 stretch-card grid-margin">
       {{#list global}}
-      <div class="position-relative" onclick="window.location.href = '/news?category=global&id={{id}}'">
+      <div class="position-relative" onclick="window.location.href = '/allnews?category=global'">
         <img style="height: 395px;width: 1000px;" src="images/news/global/{{imageName}}" alt="banner" class="img-fluid" />
         <div class="banner-content">
           <div class="overlay">
