update todays news

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -18,7 +18,7 @@
     <div class="col-xl-8 stretch-card grid-margin">
       {{#list global}}
       <div class="position-relative" onclick="window.location.href = '/allnews?category=global'">
-        <img style="height: 395px;width: 1000px;" src="images/news/global/{{imageName}}" alt="banner" class="img-fluid" />
+        <img  src="images/news/global/{{imageName}}" alt="banner" class="img-fluid" />
         <div class="banner-content">
           <div class="overlay">
           <!--  <div class="badge badge-danger fs-12 font-weight-bold mb-3">
